# Anvil

./: .gitignore  Cargo.toml  README.md  fix_all_errors.sh  pyproject.toml  setup.py  test_anvil.py
examples/: simple_nn.py  simple_test.rs
src/: async_ops.rs  config.rs  data.rs  error.rs  lib.rs  optim.rs  safety.rs  verification.rs  wasm.rs
src/async_executor/: mod.rs
src/autograd/: function.rs  graph.rs  mod.rs  ops.rs  variable.rs
src/automl/: architecture.rs  hyperopt.rs  mod.rs  nas.rs  search.rs
src/compression/: knowledge_distillation.rs  low_rank.rs  mod.rs  pruning.rs  structured.rs
src/distributed/: communication.rs  elastic.rs  mod.rs  pipeline.rs  synchronization.rs
src/gpu/: compute_engine.rs  cuda.rs  metal.rs  mod.rs  opencl.rs  unified.rs  vulkan.rs
src/kernels/: advanced_kernels.wgsl  matmul.wgsl
src/memory/: mod.rs
src/nn/: layers.rs  losses.rs  mod.rs  models.rs  optimization.rs  optimizers.rs
src/nn/losses/: adversarial.rs  classification.rs  contrastive.rs  mod.rs  ranking.rs  regression.rs
src/ops/: activation.rs  attention.rs  conv.rs  core.rs  fusion.rs  linear.rs  mod.rs  optimization.rs
src/profiling/: metrics.rs  mod.rs  pipeline.rs  profiler.rs  synchronization.rs  tracing.rs  visualization.rs
src/python/: mod.rs
src/quantization/: algorithms.rs  core.rs  export.rs  mod.rs  training.rs
src/tensor/: core.rs  devices.rs  mod.rs  ops.rs  simd.rs  storage.rs
src/training/: checkpoints.rs  metrics.rs  mixed_precision.rs  mod.rs  optimizers.rs  schedulers.rs  trainer.rs
